--- a/profile.html
+++ b/profile.html
@@ -30,4 +30,13 @@
             </div>
         </div>
     </nav>
+    <main>
+        <div class ="user-profile">
+            <div class =" profile-pic">
+
+            </div>
+            <h1 class ="name">First Name</h1>
+            <h1 class ="name">Last Name</h1>
+        </div>
+    </main>
 </body>
